--- a/templates/pages/detalles.html
+++ b/templates/pages/detalles.html
@@ -18,8 +18,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="icon" href="../img/logo.jpg">
     <title>Detalles</title>
-    <link rel="stylesheet" href="../css/etilos.css">
-    <link rel="stylesheet" href="../css/form.css">
+    <link rel="stylesheet" href="{% static 'css/etilos.css' %}">
+    <link rel="stylesheet" href="{% static 'css/form.css' %}">
 </head>
 <body>
     <header>
