--- a/static/css/etilos.css
+++ b/static/css/etilos.css
@@ -10,7 +10,7 @@
 }
 
 body {
-    background-image: url(/img/fondo-propio.jpeg);
+    background-image: url(../img/fondo-propio.jpeg);
 }
 .ini{
     margin-top: 12%;
