--- a/templates/pages/cliente.html
+++ b/templates/pages/cliente.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="icon" href="{% static 'img/logo.jpg' %}">
     <title>Cliente</title>
-    <link rel="stylesheet" href={% static 'Css/etilos.css' %}>
+    <link rel="stylesheet" href={% static 'css/etilos.css' %}>
 {#    <link rel="stylesheet" href="{% static 'Css/form.css' %}">#}
 </head>
 <body>
@@ -74,135 +74,13 @@
                         </table>
                     </div>
                         <tr>
-                            <th><a href="{% url 'crearCliente' %}"> <button class="btn btn-success col-12" type="button " > Nuevo Cliente</button></a></th>
+                            <th><a href="{% url 'nuevoCliente' %}"> <button class="btn btn-success col-12" type="button " > Nuevo Cliente</button></a></th>
                         </tr>
                 </div>
             </div>
       </div>
-
   </form>
   </tbody>
-{#    <div class="container my-5" >#}
-{#      <div class="row ">#}
-{#        <div class="table-responsive">#}
-{#        <table class="table table-sm m-auto bg-light table-borderless rounded-bottom ">#}
-{#          <thead class="table bg-warning ">#}
-{#            <h4 class=" text-center text-light my-2">Clientes</h4>#}
-{#            <tr>#}
-{#              <th scope="col">Id</th>#}
-{#              <th scope="col">Cédula</th>#}
-{#              <th scope="col">Nombre</th>#}
-{#              <th scope="col">Apellidos</th>#}
-{#              <th scope="col">Teléfono</th>#}
-{#              <th scope="col">Estatura</th>#}
-{#              <th scope="col">Peso</th>#}
-{#              <th scope="col">Género</th>#}
-{#              <th></th>#}
-{#              <th></th>#}
-{#            </tr>#}
-{#          </thead>#}
-{#          <tbody>#}
-{#            <tr>#}
-{#              <th scope="row">1</th>#}
-{#              <td>Mark</td>#}
-{#              <td>Otto</td>#}
-{#              <td>@mdo</td>#}
-{#              <td>0987456322</td>#}
-{#              <td> 1.78 cm </td>#}
-{#              <td>85.6 kg</td>#}
-{#              <td>Masculino</td>#}
-{#              <td>#}
-{#                <a href="./editarcliente.html"><button type="button" class="btn btn-dark">#}
-{#                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">#}
-{#                    <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>#}
-{#                    <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>#}
-{#                  </svg>#}
-{#                </button>#}
-{#              </a>#}
-{#                <td><!-- Button trigger modal -->#}
-{#                  <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#staticBackdrop">#}
-{#                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3-fill" viewBox="0 0 16 16">#}
-{#                      <path d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5Zm-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5ZM4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06Zm6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528ZM8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5Z"/>#}
-{#                    </svg>#}
-{#                  </button>#}
-{##}
-{#                  <!-- Modal -->#}
-{#                  <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">#}
-{#                    <div class="modal-dialog">#}
-{#                      <div class="modal-content">#}
-{#                        <div class="modal-header bg-warning text-center">#}
-{#                          <h5 class="modal-title "  id="staticBackdropLabel">Cliente</h5>#}
-{#                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>#}
-{#                        </div>#}
-{#                        <div class="modal-body text-center">#}
-{#                          ¿Desea eliminar este campo? <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-exclamation-triangle-fill" viewBox="0 0 16 16">#}
-{#                            <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>#}
-{#                          </svg>#}
-{#                        </div>#}
-{#                        <div class="modal-footer">#}
-{#                          <button type="button" class="btn btn-danger text-center" data-bs-dismiss="modal">Eliminar</button>#}
-{#                        </div>#}
-{#                      </div>#}
-{#                    </div>#}
-{#                  </div>#}
-{#                </td>#}
-{##}
-{#              </td>#}
-{#            </tr>#}
-{#            <tr>#}
-{#              <th scope="row">2</th>#}
-{#              <td>Jacob</td>#}
-{#              <td>Thornton</td>#}
-{#              <td>@fat</td>#}
-{#              <td>0987456322</td>#}
-{#              <td> 1.78 cm </td>#}
-{#              <td>85.6 kg</td>#}
-{#              <td>Masculino</td>#}
-{#              <td>#}
-{#                <a href="./editarcliente.html"><button type="button" class="btn btn-dark" >#}
-{#                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">#}
-{#                    <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>#}
-{#                    <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>#}
-{#                  </svg>#}
-{#                </button>#}
-{#              </a>#}
-{#              <td><button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#staticBackdrop">#}
-{#                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3-fill" viewBox="0 0 16 16">#}
-{#                  <path d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5Zm-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5ZM4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06Zm6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528ZM8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5Z"/>#}
-{#                </svg>#}
-{#              </button>#}
-{##}
-{#              </td>#}
-{#            </tr>#}
-{#            <tr>#}
-{#              <th scope="row">3 </th>#}
-{#              <td>Larry the</td>#}
-{#              <td>Bird</td>#}
-{#              <td>@twitter</td>#}
-{#              <td>0987456322</td>#}
-{#              <td> 1.78 cm </td>#}
-{#              <td>85.6 kg</td>#}
-{#              <td>Masculino</td>#}
-{#              <td>#}
-{#                <a href="./editarcliente.html"><button type="button" class="btn btn-dark" >#}
-{#                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">#}
-{#                    <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>#}
-{#                    <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>#}
-{#                  </svg>#}
-{#                </button>#}
-{#                </a>#}
-{#              <td class="mx-0">#}
-{#                <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#staticBackdrop">#}
-{#                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3-fill" viewBox="0 0 16 16">#}
-{#                    <path d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5Zm-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5ZM4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06Zm6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528ZM8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5Z"/>#}
-{#                  </svg>#}
-{#                </button>#}
-{#              </td>#}
-{#            </tr>#}
-{#          </tbody>#}
-{#        </table>#}
-{#      </div>#}
-{#    </div>#}
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
