--- a/templates/pages/editarcliente.html
+++ b/templates/pages/editarcliente.html
@@ -6,15 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Clientes</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/etilos.css">
+    <link rel="stylesheet" href="{% static 'css/etilos.css' %}">
   </head>
   <body class="bg-secondary">
     <header>
-      <a href="./cliente.html" style="color:black;"><button class="btn btn-light rounded my-4 mx-4">
+      <a href="{% url 'principal' %}" style="color:black;"><button class="btn btn-light rounded my-4 mx-4"></button></a>
           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-arrow-return-left" viewBox="0 0 16 16">
               <path fill-rule="evenodd" d="M14.5 1.5a.5.5 0 0 1 .5.5v4.8a2.5 2.5 0 0 1-2.5 2.5H2.707l3.347 3.346a.5.5 0 0 1-.708.708l-4.2-4.2a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 8.3H12.5A1.5 1.5 0 0 0 14 6.8V2a.5.5 0 0 1 .5-.5z"/>
             </svg>
-      </a>
     </header>
     </button>
     <div class="container my-5 mx-auto" >
