--- a/templates/pages/equipos.html
+++ b/templates/pages/equipos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Revision de Equipos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/etilos.css">
+    <link rel="stylesheet" href="{% static 'css/etilos.css' %}">
 
     <body class="bg-secondary">
         <a href="principal.html" style="color:black;"><button class="btn btn-light rounded my-4 mx-4">
