--- a/templates/pages/nuevaventa.html
+++ b/templates/pages/nuevaventa.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Nueva Venta</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-        <link rel="stylesheet" href="{% static 'Css/etilos.css' %}">
+        <link rel="stylesheet" href="{% static 'css/etilos.css' %}">
         <link rel="stysheet" href="https://icons.getbootstrap.com/">
   </head >
   <body>
@@ -20,34 +20,6 @@
           <table class="table table-sm m-auto bg-light table-borderless rounded-bottom my-4"></table>
             <br> <center class="backgraund= bg-warning "><h4> Nueva venta </h4></center><br>
             <form class="table bg-light  m-auto  table-boderless rounded-botton row g-3">
-{#                <div class="col-md-6">#}
-{#                    <label  class="form-label">Nombre del producto</label>#}
-{#                    <input  class="form-control" >#}
-{#                </div>#}
-{#                <div class="col-md-6">#}
-{#                  <label  class="form-label">Cantidad</label>#}
-{#                  <input  class="form-control" >#}
-{#                </div>#}
-{#                <div class="col-md-6">#}
-{#                  <label  class="form-label">Cliente</label>#}
-{#                  <input  class="form-control"placeholder="ingrese nombre." >#}
-{#                </div>#}
-{#                <div class="col-6">#}
-{#                  <label for="inputAddress" class="form-label">Precio de venta </label>#}
-{#                  <input type="text" class="form-control" >#}
-{#                </div>#}
-{#                <div class="col-6">#}
-{#                  <label for="inputAddress2" class="form-label">total</label>#}
-{#                  <input type="text" class="form-control" placeholder="ingrese el valor">#}
-{#                </div>#}
-{#                <div class="col-12">#}
-{#                  <center>#}
-{#                    <button type="button" class="btn btn-success my-2" data-bs-toggle="modal" data-bs-target="#exampleModal">#}
-{#                      Guardar <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"  class="bi bi-save" viewBox="0 0 16 16">#}
-{#                          <path d="M2 1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H9.5a1 1 0 0 0-1 1v7.293l2.646-2.647a.5.5 0 0 1 .708.708l-3.5 3.5a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L7.5 9.293V2a2 2 0 0 1 2-2H14a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h2.5a.5.5 0 0 1 0 1H2z"/>#}
-{#                        </svg>#}
-{#                    </button>#}
-{#                  </center>#}
                     <form method="POST" id="form-venta">
                       {% csrf_token %}
                       {{ VentaFrom.as_p }}
@@ -57,29 +29,8 @@
                         name="enviar">
                         {{ accion }}
                       </button>
-                    </form>
-                  <!-- Modal -->
-{#                  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">#}
-{#                    <div class="modal-dialog">#}
-{#                      <div class="modal-content">#}
-{#                        <div class="modal-header bg-warning">#}
-{#                          <h5 class="modal-title" id="exampleModalLabel">venta</h5>#}
-{#                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>#}
-{#                        </div>#}
-{#                        <div class="modal-body">#}
-{#                            <h4 class="text-center"> Agregación completada <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-lg" viewBox="0 0 16 16">#}
-{#                                <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z"/>#}
-{#                              </svg>#}
-{#                            </h4>#}
-{#                        </div>#}
-{#                        <div class="modal-footer">#}
-{#                          <a href="{% url 'venta' %}"><button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Terminar</button></a>#}
-{#                        </div>#}
-{#                      </div>#}
-{#                    </div>#}
-{#                  </div>#}
+                    </form>}
                     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-{#                </div>#}
             </form>
       </div>
     </body>
