--- a/templates/pages/editventa.html
+++ b/templates/pages/editventa.html
@@ -1,92 +1,112 @@
+{#{% load static %}#}
+{#<!doctype html>#}
+{#<html lang="en">#}
+{#  <head>#}
+{#        <meta charset="utf-8">#}
+{#        <meta name="viewport" content="width=device-width, initial-scale=1">#}
+{#        <title>Editar Venta</title>#}
+{#        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">#}
+{#        <link rel="stylesheet" href="{% static 'css/etilos.css' %}">#}
+{#         <link rel="stysheet" href="https://icons.getbootstrap.com/">#}
+{#   </head>#}
+{#    <body>#}
+{#      <header>#}
+{#        <a href="{% url 'venta' %}" style="color:black;"><button class="btn btn-light rounded my-4 mx-4">#}
+{#            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-arrow-return-left" viewBox="0 0 16 16">#}
+{#                <path fill-rule="evenodd" d="M14.5 1.5a.5.5 0 0 1 .5.5v4.8a2.5 2.5 0 0 1-2.5 2.5H2.707l3.347 3.346a.5.5 0 0 1-.708.708l-4.2-4.2a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 8.3H12.5A1.5 1.5 0 0 0 14 6.8V2a.5.5 0 0 1 .5-.5z"/>#}
+{#              </svg>#}
+{#        </a>#}
+{#      </header>#}
+{#        <div class="container">#}
+{#            <table class="table  m-auto  table-boderless rounded-botton  ">#}
+{#            </table>#}
+{#            <br> <center class="backgraund= bg-warning "><h4> Modificar  </h4></center><br>#}
+{#            <form class="table  m-auto bg-light  table-boderless rounded-botton row g-3" method="post" id="form-editarventa">#}
+{#                {% csrf_token %}#}
+{#                {{ ventaForm.as_p }}#}
+{#                  <center>#}
+{#                    <button type="button" class="btn btn-success my-2" data-bs-toggle="modal" data-bs-target="#exampleModal"#}
+{#                    id="enviar"#}
+{#                    type="submit"#}
+{#                    name="enviar">#}
+{#                    {{ accion }}#}
+{#                      Guardar <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"  class="bi bi-save" viewBox="0 0 16 16">#}
+{#                          <path d="M2 1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H9.5a1 1 0 0 0-1 1v7.293l2.646-2.647a.5.5 0 0 1 .708.708l-3.5 3.5a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L7.5 9.293V2a2 2 0 0 1 2-2H14a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h2.5a.5.5 0 0 1 0 1H2z"/>#}
+{#                        </svg>#}
+{#                    </button>#}
+{#            </form>#}
+{##}
+{#             </tbody>#}
+{#          </table>#}
+{#       </div>#}
+{#                  </center>#}
+{#                  <!-- Modal -->#}
+{#                  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">#}
+{#                    <div class="modal-dialog">#}
+{#                      <div class="modal-content">#}
+{#                        <div class="modal-header bg-warning">#}
+{#                          <h5 class="modal-title" id="exampleModalLabel">venta</h5>#}
+{#                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>#}
+{#                        </div>#}
+{#                        <div class="modal-body">#}
+{#                        <h4 class="text-center"> Modificación completada <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-check-lg" viewBox="0 0 16 16">#}
+{#                            <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z"/>#}
+{#                          </svg>#}
+{#                        </h4>#}
+{#                        </div>#}
+{#                        <div class="modal-footer">#}
+{#                          <a href="{% url 'venta' %}"><button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Terminar</button>#}
+{#                          </a>#}
+{#                        </div>#}
+{#                      </div>#}
+{#                    </div>#}
+{#                  </div>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>#}
+{#                </div>#}
+{#            </div>#}
+{#                </div>#}
+{#            </form>#}
+{#        </div>#}
+{#            </form>#}
+{#        </div>#}
+{#    </body>#}
+{#</html>#}
 {% load static %}
 <!doctype html>
 <html lang="en">
   <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Editar Eventa</title>
+        <title>Nueva Venta</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
         <link rel="stylesheet" href="{% static 'css/etilos.css' %}">
-         <link rel="stysheet" href="https://icons.getbootstrap.com/">
-   </head>
-    <body>
+        <link rel="stysheet" href="https://icons.getbootstrap.com/">
+  </head >
+  <body>
       <header>
-        <a href="{% url 'venta' %}" style="color:black;"><button class="btn btn-light rounded my-4 mx-4">
+        <a href="{% url 'venta' %}" style="color:black;"></a><button class="btn btn-light rounded my-4 mx-4"></button></a>
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-arrow-return-left" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M14.5 1.5a.5.5 0 0 1 .5.5v4.8a2.5 2.5 0 0 1-2.5 2.5H2.707l3.347 3.346a.5.5 0 0 1-.708.708l-4.2-4.2a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 8.3H12.5A1.5 1.5 0 0 0 14 6.8V2a.5.5 0 0 1 .5-.5z"/>
-              </svg>
-        </a>
+            </svg>
       </header>
-        <div class="container">
-            <table class="table  m-auto  table-boderless rounded-botton  ">
-            </table>
-            <br> <center class="backgraund= bg-warning "><h4> Modificar  </h4></center><br>
-            <form class="table  m-auto bg-light  table-boderless rounded-botton row g-3" method="post" id="form-editarventa">
-                {% csrf_token %}
-                {{ ventaForm.as_p }}
-{#                <div class="col-md-6">#}
-{#                  <label  class="form-label">Id Ventas</label>#}
-{#                  <input  class="form-control" >#}
-{#                </div>#}
-{#                <div class="col-md-6">#}
-{#                  <label  class="form-label">Nombre del producto</label>#}
-{#                  <input  class="form-control"placeholder="agua ,gatorade ..." >#}
-{#                </div>#}
-{#                <div class="col-6">#}
-{#                  <label for="inputAddress" class="form-label">Categoria </label>#}
-{#                  <input type="text" class="form-control" placeholder="ingresar categoria">#}
-{#                </div>#}
-{#                <div class="col-6">#}
-{#                  <label for="inputAddress2" class="form-label">Pago Diario</label>#}
-{#                  <input type="text" class="form-control" placeholder="ingrese el valor">#}
-{#                </div>#}
-{#                <div class="col-12">#}
-                  <center>
-                    <button type="button" class="btn btn-success my-2" data-bs-toggle="modal" data-bs-target="#exampleModal"
-                    id="enviar"
-                    type="submit"
-                    name="enviar">
-                    {{ accion }}
-                      Guardar <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"  class="bi bi-save" viewBox="0 0 16 16">
-                          <path d="M2 1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H9.5a1 1 0 0 0-1 1v7.293l2.646-2.647a.5.5 0 0 1 .708.708l-3.5 3.5a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L7.5 9.293V2a2 2 0 0 1 2-2H14a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h2.5a.5.5 0 0 1 0 1H2z"/>
-                        </svg>
-                    </button>
-            </form>
-
-             </tbody>
-          </table>
-       </div>
-                  </center>
-                  <!-- Modal -->
-                  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                    <div class="modal-dialog">
-                      <div class="modal-content">
-                        <div class="modal-header bg-warning">
-                          <h5 class="modal-title" id="exampleModalLabel">venta</h5>
-                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                        <h4 class="text-center"> Modificación completada <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-check-lg" viewBox="0 0 16 16">
-                            <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z"/>
-                          </svg>
-                        </h4>
-                        </div>
-                        <div class="modal-footer">
-                          <a href="{% url 'venta' %}"><button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Terminar</button>
-                          </a>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                        </div>
-                    </div>
+      <div class="container">
+          <table class="table table-sm m-auto bg-light table-borderless rounded-bottom my-4"></table>
+            <br> <center class="backgraund= bg-warning "><h4> Editar venta </h4></center><br>
+            <form class="table bg-light  m-auto  table-boderless rounded-botton row g-3">
+                    <form method="POST" id="form-venta">
+                      {% csrf_token %}
+                      {{ VentaFrom.as_p }}
+                      <button
+                        id="enviar"
+                        type="submit"
+                        name="enviar">
+                        {{ accion }}
+                      </button>
+                    </form>}
                     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-                </div>
-            </div>
-                </div>
             </form>
-        </div>
-            </form>
-        </div>
+      </div>
     </body>
 </html>
