--- a/templates/pages/equipos.html
+++ b/templates/pages/equipos.html
@@ -61,12 +61,12 @@
                             {% endfor %}
                          </tbody>
                       </table>
-                      <form id="form-cargo" class="form">
+                      <form id="form-accesorio" class="form">
                         <button
                         id="enviar"
                         type="submit"
                         name="enviar">
-                         <a href="{% url 'nuevoAccesorio' %}"><button class="btn btn-success col-12" type="button " >Añadir Equipo</button></a>
+                         <a href="{% url 'nuevoAccesorio' %}" class="btn btn-success col-12" style="text-align: center">Añadir Equipo</a>
                         </button>
                       </form>
                    </div>
