--- a/templates/pages/nuevaventa.html
+++ b/templates/pages/nuevaventa.html
@@ -17,21 +17,17 @@
             </svg>
       </header>
       <div class="container">
-          <table class="table table-sm m-auto bg-light table-borderless rounded-bottom my-4"></table>
+          <table class="table table-sm m-auto bg-light table-borderless rounded-bottom my-4">
             <br> <center class="backgraund= bg-warning "><h4> Nueva venta </h4></center><br>
             <form class="table bg-light  m-auto  table-boderless rounded-botton row g-3">
-                    <form method="POST" id="form-venta">
-                      {% csrf_token %}
-                      {{ VentaFrom.as_p }}
-                      <button
-                        id="enviar"
-                        type="submit"
-                        name="enviar">
-                        {{ accion }}
-                      </button>
-                    </form>
+                <form action="" class="table bg-light  m-auto  table-boderless rounded-botton row g-3 " method="post">
+                    {% csrf_token %}
+                    {{ form }}
+                    <input type="submit" class="btn btn-primary" name="btnEnviar" id="btnEnviar" value="Enviar">
+                </form>
                     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
             </form>
+          </table>
       </div>
     </body>
 </html>
