--- a/templates/pages/ventas.html
+++ b/templates/pages/ventas.html
@@ -44,7 +44,7 @@
                                 <td>{{ venta.precio }}</td>
                               <td>
                                 <a href="{% url 'editarVenta' venta.id %}">✏️</a>
-                                <a href="{% url 'eliminarVenta' venta.id %}">❌</a>
+                                <a href="{% url 'eliminarVenta' %}">❌</a>
                               </td>
                             </tr>
                          </tbody>
