--- a/templates/pages/editventa.html
+++ b/templates/pages/editventa.html
@@ -79,7 +79,7 @@
   <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Nueva Venta</title>
+        <title>Editar Venta</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
         <link rel="stylesheet" href="{% static 'css/etilos.css' %}">
         <link rel="stysheet" href="https://icons.getbootstrap.com/">
@@ -95,16 +95,15 @@
           <table class="table table-sm m-auto bg-light table-borderless rounded-bottom my-4"></table>
             <br> <center class="backgraund= bg-warning "><h4> Editar venta </h4></center><br>
             <form class="table bg-light  m-auto  table-boderless rounded-botton row g-3">
-                    <form method="POST" id="form-venta">
+                    <form action="{% url 'actualizarVenta' alumno.id %}" class="table bg-light  m-auto  table-boderless rounded-botton row g-3 " method="post">
                       {% csrf_token %}
-                      {{ VentaFrom.as_p }}
-                      <button
-                        id="enviar"
-                        type="submit"
-                        name="enviar">
-                        {{ accion }}
-                      </button>
-                    </form>}
+                        {% if mensaje %}
+                            <div class="alert alert-success" role="alert">Venta Actualizada</div>
+                        {% endif %}
+                      {{ form|crispy }}
+                        <button>Guardar</button>
+                        <a class="btn btn-warning" href="{% url 'venta' %}">Cancelar</a>
+                    </form>
                     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
             </form>
       </div>
