--- a/templates/pages/equipos.html
+++ b/templates/pages/equipos.html
@@ -34,41 +34,49 @@
         <i class="bi bi-code"></i>
      </div>
   <tbody>
-  <form>
+<form>
       <div class="container">
-            <div class="row">
-                <div class="col">
-                    <div class="consulta none table-responsive" id="consulta">
-                      <table class="table table-sm m-auto bg-light table-borderless rounded-bottom my-4" id="consulta-est" border="0">
-                         <thead class="table bg-warning">
-                            <th >#</th>
-                            <th>Nombre</th>
-                            <th>Categoria</th>
-                            <th>Descripcion</th>
-                         </thead>
+        <div class="row">
+            <div class="col">
+                <div class="consulta none table-responsive" id="consulta">
+                    <table class="table table-sm m-auto bg-light table-borderless rounded-bottom my-4" id="consulta-est" border="0">
+                        <thead class="table bg-warning">
+                             <tr class="table">
+                                <th >#</th>
+                                <th>Nombre</th>
+                                <th>Categoria</th>
+                                <th>Descripcion</th>
+                                <th>Acciones</th>
+                             </tr>
+                        </thead>
                          <tbody class="detalle-est" id="detalle-est">
-                            {% for accesorio in accesorios  %}
+                            {% for venta in ventas  %}
                             <tr>
-                                <td>{{accesorio.idAccesorio}}</td>
-                                <td>{{accesorio.nombre}}</td>
-                                <td>{{accesorio.categoria}}</td>
-                                <td>{{accesorio.descripcion}}</td>
-                              <td class="acciones">
-                                <a href="{% url 'editarAccesorio' accesorio.id %}">✏️</a>
-                                <a href="{% url 'eliminarAccesorio' accesorio.id %}">❌</a>
+                                <td>{{venta.id}}</td>
+                                <td>{{venta.nombre}}</td>
+                                <td>{{ venta.categoriaPeso }}</td>
+                                <td>{{ venta.descripcion }}</td>
+                              <td>
+                                <a href="{% url 'editarAccesorio' venta.id %}">✏️</a>
+                                <a href="{% url 'eliminarAccesorio' %}">❌</a>
                               </td>
                             </tr>
-                            {% endfor %}
                          </tbody>
-                      </table>
-                      <form id="form-producto" class="form">
-                        <a href="{% url 'nuevoAccesorio' %}" class="btn btn-success col-12" style="text-align: center">Añadir Producto</a>
+                            {% endfor %}
+                    </table>
+                    <form id="form-venta" class="form">
+                        <button
+                        id="enviar"
+                        type="submit"
+                        name="enviar">
+                         <a href="{% url 'registrarAccesorio' %}" class="btn btn-success col-12" style="text-align: center">Añadir Equipo</a>
+                        </button>
                       </form>
-                   </div>
+
                 </div>
-            </div>
-      </div>
-  </form>
+        </div>
+    </div>
+</form>
   </tbody>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
