--- a/templates/pages/nuevaventa.html
+++ b/templates/pages/nuevaventa.html
@@ -22,7 +22,7 @@
             <form class="table bg-light  m-auto  table-boderless rounded-botton row g-3">
                 <form action="" class="table bg-light  m-auto  table-boderless rounded-botton row g-3 " method="post">
                     {% csrf_token %}
-                    {{ form }}
+                    {{ formv }}
                     <input type="submit" class="btn btn-primary" name="btnEnviar" id="btnEnviar" value="Enviar">
                 </form>
                     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
